cargo_check_ghost.log
warning: unused import: `Pixel`
 --> crates/forge-test-tools/src/screenshot.rs:1:24
  |
1 | use image::{RgbaImage, Pixel};
  |                        ^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused imports: `ElementState` and `MouseButton`
 --> crates/forge-test-tools/src/input_sim.rs:1:20
  |
1 | use winit::event::{ElementState, MouseButton, WindowEvent};
  |                    ^^^^^^^^^^^^  ^^^^^^^^^^^

warning: `forge-test-tools` (lib) generated 2 warnings (run `cargo fix --lib -p forge-test-tools` to apply 2 suggestions)
    Checking forge-app v0.1.0 (/app/crates/forge-app)
error[E0308]: mismatched types
    --> crates/forge-app/src/application.rs:1084:34
     |
1084 |                 rich_spans.push((ghost.clone(), ghost_attrs));
     |                                  ^^^^^^^^^^^^^ expected `String`, found `&String`
     |
help: try using a conversion method
     |
1084 -                 rich_spans.push((ghost.clone(), ghost_attrs));
1084 +                 rich_spans.push((ghost.to_string(), ghost_attrs));
     |

warning: variable does not need to be mutable
   --> crates/forge-app/src/application.rs:371:13
    |
371 |         let mut file_explorer = crate::file_explorer::FileExplorer::new();
    |             ----^^^^^^^^^^^^^
    |             |
    |             help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

warning: unreachable pattern
    --> crates/forge-app/src/application.rs:2827:25
     |
2644 |                         "g" => {
     |                         --- matches all the relevant values
...
2827 |                         "g" if shift => {
     |                         ^^^ no value can reach this
     |
     = note: `#[warn(unreachable_patterns)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0308`.
warning: `forge-app` (bin "forge") generated 2 warnings
error: could not compile `forge-app` (bin "forge") due to 1 previous error; 2 warnings emitted
